@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -7,7 +7,7 @@
  * "License"); you may not use this file except in compliance
  * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *     https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -47,7 +47,7 @@ class FieldAccessUnsafe extends FieldAccess {
     AvroEncode enc = field.getAnnotation(AvroEncode.class);
     if (enc != null)
       try {
-        return new UnsafeCustomEncodedField(field, enc.using().newInstance() );
+        return new UnsafeCustomEncodedField(field, enc.using().getDeclaredConstructor().newInstance());
       } catch (Exception e) {
         throw new AvroRuntimeException("Could not instantiate custom Encoding");
       }
@@ -358,6 +358,7 @@ class FieldAccessUnsafe extends FieldAccess {
       encoding.write(UNSAFE.getObject(object, offset), out);
     }
 
+    @Override
     protected boolean isCustomEncoded() {
       return true;
     }
